# astra_teleop_web

./: README.md  pyproject.toml
src/astra_teleop_web/: main.py  teleoprator.py  webserver.py
src/astra_teleop_web/static/: bench_detect.html  bench_detect.py  bench_resize.html  bench_resize.py  hand.html  hand.js  index.html  index.js
