[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra_teleop_web"
version = "0.0.1"
authors = [
  { name="lookas", email="i@18kas.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiortc",
    "aiohttp",
]

[project.urls]
Homepage = "https://github.com/hilookas/astra_teleop_web"
Issues = "https://github.com/hilookas/astra_teleop_web/issues"